--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
       }
     </script>
     <script type="importmap">
-    {
-      "imports": {
-        "react": "https://aistudiocdn.com/react@^19.2.0",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-        "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
-        "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
-        "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-        "vite": "https://aistudiocdn.com/vite@^7.2.4",
-        "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.263.1",
+    "recharts": "https://esm.sh/recharts@2.10.3",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "firebase/app": "https://esm.sh/firebase@10.12.0/app",
+    "firebase/database": "https://esm.sh/firebase@10.12.0/database",
+    "firebase/storage": "https://esm.sh/firebase@10.12.0/storage",
+    "firebase/auth": "https://esm.sh/firebase@10.12.0/auth",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+  }
+}
+</script>
   </head>
   <body class="bg-stone-50 text-stone-900 antialiased font-sans">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
